make the magazine image into two, align them to overlap correctly and fix the centering in lower resolutions

--- a/assets/style.css
+++ b/assets/style.css
@@ -292,10 +292,35 @@ footer a:hover {
   text-decoration: none;
 }
 
+.stacked-mags {
+  position: relative;
+  min-width: 240px;
+  max-width: 245px;
+  height: 260px;
+}
+
+.mag1 {
+  position: absolute;
+  z-index: 1;
+}
+
+.mag2 {
+  position: absolute;
+  z-index: 2;
+  right: 0;
+  bottom: 0;
+}
+
+
+
 @media only screen and (max-width: 767px) {
   .side-column img {
     width: 200px;
     height: 200px;
+  }
+
+  .stacked-mags {
+    margin: auto;
   }
 }
 
